# halo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
results/: README.md
scripts/: estimate_sweep_reuse.py  run_audit_co_lmlm.sh  run_audit_suite_co_lmlm.sh  run_del_off_sensitivity_co_lmlm.sh  run_policy_matrix_co_lmlm.sh  setup_environment.sh
src/halo/: run_audit.py
src/halo/cli/: args.py  reporting.py  runner.py
src/halo/core/: backend.py  entanglement.py  metrics.py  neighbors.py
src/halo/interventions/: closure.py  filtering.py
src/lmlm-audit/: audit_backend.py
src/lmlm_audit/: __init__.py  backend.py  examples.py  metrics.py  reporting.py  run_audit.py  runner.py  states.py
src/lmlm_audit/cli/: __init__.py  jobs.py  probe.py  reporting.py  run_audit.py  runner.py
src/lmlm_audit/colmlm/: __init__.py  answers.py  backend.py  closure.py  errors.py  index_filter.py
src/lmlm_audit/core/: __init__.py  backend.py  examples.py  metrics.py  probe.py
src/lmlm_audit/rel_lmlm/: __init__.py  backend.py  database.py  loader.py
src/models/co_lmlm/: __init__.py  backend.py
tests/: conftest.py  test_adversary.py  test_audit_backend.py  test_closure.py  test_colmlm_backend.py  test_database_states.py  test_entanglement.py  test_equivalence.py  test_metrics.py  test_model_loader.py  test_probe.py  test_run_audit.py
