[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "lmlm-audit"
version = "0.1.0"
description = "A causal audit of forgetting and knowledge externalization in Limited Memory Language Models."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.2",
    "lmlm",
    "matplotlib>=3.10.8",
    "numpy>=1.26,<2",
    "python-dotenv>=1.2.2",
    "torch>=2.4,<2.5",
    "tqdm>=4.67.3",
    "transformers>=4.49,<4.50",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "wandb>=0.25.0",
    "vllm>=0.6.3.post1",
    "sentence-transformers>=5.3.0",
    "faiss-cpu>=1.13.2",
    "requests>=2.32.5",
]

[project.scripts]
lmlm-audit = "lmlm_audit.run_audit:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
lmlm = { path = "../LMLM", editable = true }
